--- a/config/dnsmasq.conf
+++ b/config/dnsmasq.conf
@@ -1,10 +1,12 @@
+# dnsmasq config, for a complete example, see:
+#   http://oss.segetech.com/intra/srv/dnsmasq.conf
+# log all dns queries
+log-queries
+# dont use hosts nameservers
 no-resolv
-
-# upstream dns
-server=1.1.1.1
+# use cloudflare as default nameservers
 server=1.0.0.1
-server=8.8.8.8
-server=8.8.4.4
+server=1.1.1.1
 
 # lan entries, DO NOT MODIFY!
 addn-hosts=/etc/lan.list
