--- a/config/dnsmasq.conf
+++ b/config/dnsmasq.conf
@@ -1,9 +1,11 @@
-# dnsmasq config, for a complete example, see:
-#   http://oss.segetech.com/intra/srv/dnsmasq.conf
+# dnsmasq config, for a complete example, see: http://oss.segetech.com/intra/srv/dnsmasq.conf
+
 # log all dns queries
 log-queries
+
 # dont use hosts nameservers
 no-resolv
+
 # use cloudflare as default nameservers
 server=1.0.0.1
 server=1.1.1.1
